# navigator

./: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  navigator.db  push.sh  pyproject.toml  start.sh  技术要求.md
.serena/: project.yml
app/: config.py  database.py  main.py
app/core/: deps.py  security.py
app/models/: __init__.py  card.py  category.py  config.py  user.py
app/routers/: auth.py  cards.py  categories.py  configs.py  navigation.py  status.py  users.py
app/services/: seed.py
app/templates/: admin.html  index.html  login.html
docs/prototype/: index.html
docs/prototype/data/: navigation.json
static/css/: fonts.css
